--- a/.github/workflows/publish-helm-chart.yml
+++ b/.github/workflows/publish-helm-chart.yml
@@ -76,16 +76,24 @@ jobs:
           PGP_PASSPHRASE: "${{ secrets.PARADEDB_PGP_PASSPHRASE }}"
         run: |
           IFS=""
-          echo "$PGP_PRIVATE_KEY" | gpg --dearmor > $HOME/secring.gpg
+          echo "$PGP_PRIVATE_KEY" | gpg --dearmor --verbose > $HOME/secring.gpg
           echo "$PGP_PASSPHRASE" > $HOME/passphrase.txt
-
+    
           # Verify if the key has been imported
           gpg --list-secret-keys --keyring $HOME/secring.gpg
-
+    
+          # Check if the secring.gpg file exists
+          if [ -f "$HOME/secring.gpg" ]; then
+            echo "Secring file exists."
+          else
+            echo "Secring file does not exist."
+            exit 1
+          fi
+    
           # Tell chart-releaser-action where to find the key and its passphrase
           echo "CR_KEYRING=$HOME/secring.gpg" >> "$GITHUB_ENV"
           echo "CR_PASSPHRASE_FILE=$HOME/passphrase.txt" >> "$GITHUB_ENV"
-
+    
       - name: Run chart-releaser
         uses: helm/chart-releaser-action@v1.6.0
         with:
