--- a/.github/workflows/test-helm-chart.yml
+++ b/.github/workflows/test-helm-chart.yml
@@ -7,8 +7,6 @@ name: Test Helm Chart
 
 on:
   pull_request:
-    branches:
-      - main
     paths:
       - "charts/**"
       - ".github/workflows/test-helm-chart.yml"
@@ -26,8 +24,8 @@ jobs:
       - name: Checkout
         uses: actions/checkout@v4
 
-      - name: Set up Kubernetes
-        uses: engineerd/setup-kind@v0.5.0
+      - name: Create K8s Kind Cluster
+        uses: helm/kind-action@v1.8.0
 
       - name: Create Kubernetes Namespace
         run: kubectl create namespace helm-test
