--- a/.github/workflows/test-helm-chart.yml
+++ b/.github/workflows/test-helm-chart.yml
@@ -31,10 +31,10 @@ jobs:
         run: kubectl create namespace helm-test
 
       - name: Install Dependencies
-        run: helm dependency update ./charts/paradedb/Chart.yaml
+        run: helm dependency update ./charts/paradedb/
 
       - name: Deploy Helm Chart to Test Namespace
-        run: helm install test-release ./charts/paradedb/Chart.yaml --namespace helm-test
+        run: helm install test-release ./charts/paradedb/ --namespace helm-test
 
       - name: Run Helm Tests
         run: helm test test-release --namespace helm-test
