--- a/charts/paradedb/values.yaml
+++ b/charts/paradedb/values.yaml
@@ -38,7 +38,7 @@ cluster:
   # Description for the cluster
   description: "Cluster to run ParadeDB"
   # Postgres major version
-  majorVersion: "15"
+  majorVersion: "16"
   # Override image for the PostgreSQL instance
   # imageName: ""
   # Image pull policy
@@ -65,11 +65,8 @@ cluster:
     pg_hba:
       - host all all 10.244.0.0/16 md5
     shared_preload_libraries:
-      - citus
-      - pg_cron
-      - pg_net
-      - pgaudit
-      - pgautofailover
+      - pg_bm25
+      - pg_analytics
 
   # Bootstrap configuration for the database
   bootstrap:
@@ -79,34 +76,10 @@ cluster:
       # secret:
       #   name: cluster-example-app-user
       postInitApplicationSQL:
-        - CREATE EXTENSION IF NOT EXISTS "pgcrypto" CASCADE;
         - CREATE EXTENSION IF NOT EXISTS "pg_bm25" CASCADE;
         - CREATE EXTENSION IF NOT EXISTS "pg_analytics" CASCADE;
         - CREATE EXTENSION IF NOT EXISTS "svector" CASCADE;
         - CREATE EXTENSION IF NOT EXISTS "vector" CASCADE;
-        - CREATE EXTENSION IF NOT EXISTS "pg_cron" CASCADE;
-        - CREATE EXTENSION IF NOT EXISTS "pg_net" CASCADE;
-        - CREATE EXTENSION IF NOT EXISTS "pg_ivm" CASCADE;
-        - CREATE EXTENSION IF NOT EXISTS "pg_graphql" CASCADE;
-        - CREATE EXTENSION IF NOT EXISTS "pg_jsonschema" CASCADE;
-        - CREATE EXTENSION IF NOT EXISTS "pg_repack" CASCADE;
-        - CREATE EXTENSION IF NOT EXISTS "pg_stat_statements" CASCADE;
-        - CREATE EXTENSION IF NOT EXISTS "pg_hint_plan" CASCADE;
-        - CREATE EXTENSION IF NOT EXISTS "pgtap" CASCADE;
-        - CREATE EXTENSION IF NOT EXISTS "pgaudit" CASCADE;
-        - CREATE EXTENSION IF NOT EXISTS "postgis" CASCADE;
-        - CREATE EXTENSION IF NOT EXISTS "pgrouting" CASCADE;
-        - CREATE EXTENSION IF NOT EXISTS "http" CASCADE;
-        - CREATE EXTENSION IF NOT EXISTS "age" CASCADE;
-        - CREATE EXTENSION IF NOT EXISTS "rum" CASCADE;
-        - CREATE EXTENSION IF NOT EXISTS "citus" CASCADE;
-        - CREATE EXTENSION IF NOT EXISTS "pgsodium" CASCADE;
-        - CREATE EXTENSION IF NOT EXISTS "pg_partman" CASCADE;
-        - CREATE EXTENSION IF NOT EXISTS "pgautofailover" CASCADE;
-        - CREATE EXTENSION IF NOT EXISTS "pg_show_plans" CASCADE;
-        - CREATE EXTENSION IF NOT EXISTS "ddlx" CASCADE;
-        - CREATE EXTENSION IF NOT EXISTS "sqlite_fdw" CASCADE;
-        - CREATE EXTENSION IF NOT EXISTS "mysql_fdw" CASCADE;
         - ALTER DATABASE paradedb SET search_path TO public,paradedb;
         - ALTER USER paradedb WITH SUPERUSER;
       postInitTemplateSQL:
