--- a/charts/paradedb/values.yaml
+++ b/charts/paradedb/values.yaml
@@ -76,6 +76,7 @@ cluster:
       # secret:
       #   name: cluster-example-app-user
       postInitApplicationSQL:
+        - CREATE EXTENSION IF NOT EXISTS "pgcrypto" CASCADE; # Required for managed ParadeDB
         - CREATE EXTENSION IF NOT EXISTS "pg_bm25" CASCADE;
         - CREATE EXTENSION IF NOT EXISTS "pg_analytics" CASCADE;
         - CREATE EXTENSION IF NOT EXISTS "svector" CASCADE;
