--- a/.github/workflows/lint-helm.yml
+++ b/.github/workflows/lint-helm.yml
@@ -8,8 +8,8 @@ name: Lint Helm
 on:
   pull_request:
     paths:
-      - "charts/paradedb/*"
-      - ".github/workflows/lint-helm.yml"
+      - 'charts/paradedb/*'
+      - '.github/workflows/lint-helm.yml'
   workflow_dispatch:
 
 concurrency:
@@ -24,6 +24,10 @@ jobs:
     steps:
       - name: Checkout Git Repository
         uses: actions/checkout@v4
+
+      - name: Build dependencies
+        working-directory: charts/paradedb/
+        run: helm dep build
 
       - name: Check Helm Formatting
         working-directory: charts/paradedb/
