--- a/values.yaml
+++ b/values.yaml
@@ -16,4 +16,4 @@ auth:
   database: paradedb
 
 # Shared preload libraries (comma-separated list)
-postgresqlSharedPreloadLibraries: 'pgaudit,pg_cron,pg_search,pg_analytics'
+postgresqlSharedPreloadLibraries: "pgaudit,pg_cron,pg_search,pg_analytics"
