--- a/charts/paradedb/values.yaml
+++ b/charts/paradedb/values.yaml
@@ -17,4 +17,4 @@ paradedb:
     database: paradedb
 
   # Shared preload libraries (comma-separated list)
-  postgresqlSharedPreloadLibraries: "pgaudit,pg_cron,pg_search,pg_lakehouse"
+  postgresqlSharedPreloadLibraries: "pgaudit,pg_lakehouse,pg_search"
